--- a/awards.html
+++ b/awards.html
@@ -17,8 +17,6 @@
     <link rel="stylesheet" href="assets/css/magnificpopup.css">
     <!-- slick slider -->
     <link rel="stylesheet" href="assets/css/slick.css">
-    <!-- aos -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- css file link -->
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/main.css">
@@ -183,7 +181,7 @@
     <!-- main section start -->
 
     <!-- biography start -->
-    <div class="biography__area" data-aos="fade-up" data-aos-duration="3000">
+    <div class="biography__area">
         <div class="container">
             <div class="row">
                 <div class="about__title">
@@ -195,7 +193,7 @@
     <!-- biography end -->
 
     <!-- awards start -->
-    <div class="awards__area section__padding" data-aos="fade-up" data-aos-duration="3000">
+    <div class="awards__area section__padding" >
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -229,7 +227,7 @@
     <!-- awards end -->
 
     <!-- awards start -->
-    <div class="awards__area section__padding" data-aos="fade-up" data-aos-duration="3000">
+    <div class="awards__area section__padding">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -376,8 +374,6 @@
     <!-- magmific popup -->
     <script src="assets/js/magnific.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <!-- main js -->
     <script script src="assets/js/app.js"></script>
 
