--- a/biography.html
+++ b/biography.html
@@ -17,8 +17,6 @@
     <link rel="stylesheet" href="assets/css/magnificpopup.css">
     <!-- slick slider -->
     <link rel="stylesheet" href="assets/css/slick.css">
-    <!-- aos -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- css file link -->
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/main.css">
@@ -184,7 +182,7 @@
     <!-- main section start -->
 
     <!-- biography start -->
-    <div class="biography__area" data-aos="fade-up" data-aos-duration="3000">
+    <div class="biography__area">
         <div class="container">
             <div class="row">
                 <div class="about__title">
@@ -196,7 +194,7 @@
     <!-- biography end -->
 
     <!-- bg video start -->
-    <div class="bg-video  section__padding" data-aos="fade-up" data-aos-duration="3000">
+    <div class="bg-video  section__padding">
         <div class="container">
             <div class="row">
                 <div class="col-xl-8">
@@ -228,7 +226,7 @@
     <!-- bg video start -->
 
     <!-- quoto start -->
-    <div class="quoto__area section__padding" data-aos="fade-up" data-aos-duration="3000">
+    <div class="quoto__area section__padding" >
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -244,7 +242,7 @@
 
 
     <!-- review start -->
-    <div class="review section__padding" data-aos="fade-up" data-aos-duration="3000">
+    <div class="review section__padding">
         <div class="container">
             <div class="review__active">
                 <div class="row g-0 align-items-center single__review">
@@ -319,7 +317,7 @@
     <!-- review end -->
 
     <!-- tours start -->
-    <div class="tours__area section__padding" data-aos="fade-up" data-aos-duration="3000">
+    <div class="tours__area section__padding">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -379,7 +377,7 @@
     <!-- tours end -->
 
     <!-- styling start -->
-    <div class="styling__area pb-5" data-aos="fade-up" data-aos-duration="3000">
+    <div class="styling__area pb-5" >
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -506,8 +504,6 @@
     <!-- magmific popup -->
     <script src="assets/js/magnific.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <!-- main js -->
     <script script src="assets/js/app.js"></script>
 
