--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <!-- animated headline -->
     <link rel="stylesheet" href="assets/css/animated-headline.css">
-    <!-- aos -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- css file link -->
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/main.css">
@@ -201,8 +199,7 @@
     <!-- banner end -->
 
     <!-- release start -->
-    <div class="release__area section__padding" data-aos="flip-left" data-aos-easing="ease-out-cubic"
-        data-aos-duration="2000">
+    <div class="release__area section__padding">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5">
@@ -280,8 +277,7 @@
                 </div>
             </div>
             <div class="row align-items-center g-5 ">
-                <div class="col-lg-4 col-md-6" data-aos="fade-right" data-aos-offset="300"
-                    data-aos-easing="ease-in-sine">
+                <div class="col-lg-4 col-md-6">
                     <a href="https://www.instagram.com/tanjintisha/?hl=en"
                         class="single__sporlight first_sporlight d-block" target="_blank">
                         <div class="spotlight_photo">
@@ -304,8 +300,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-md-6" data-aos="fade-left" data-aos-anchor="#example-anchor"
-                    data-aos-offset="500" data-aos-duration="500">
+                <div class="col-lg-4 col-md-6">
                     <a href="https://www.youtube.com/channel/UCNK-u-Is7k00Jq8QsdbhrDw"
                         class="single__sporlight first_sporlight d-block" target="_blank">
                         <div class="spotlight_photo">
@@ -335,7 +330,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
+            <div class="row">
                 <div class="col-12">
                     <div class="row align-items-center">
                         <div class="col-lg-7">
@@ -432,7 +427,7 @@
     <!-- tv end -->
 
     <!-- about start -->
-    <div class="about__area section__padding" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
+    <div class="about__area section__padding">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-7">
@@ -549,8 +544,6 @@
     <script src="assets/js/magnific.min.js"></script>
     <!-- animated-headline -->
     <script src="assets/js/animated-headline.js"></script>
-    <!-- aos -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <!-- main js -->
     <script src="assets/js/app.js"></script>
 </body>
