--- a/contact.html
+++ b/contact.html
@@ -183,7 +183,7 @@
     <!-- contact start -->
     <div class="contact__area section__padding">
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center g-3">
                 <div class="col-lg-4">
                     <div class="single__contact text-center card p-5">
                         <img src="assets/image/email.png" alt="">
