--- a/index.html
+++ b/index.html
@@ -266,8 +266,34 @@
     </div>
     <!-- release end -->
 
-
-
+    <!-- celebration start -->
+    <div class="celebration__area section__padding">
+        <div class="container">
+            <!-- <div class="row">
+                <div class="col-12">
+                    <div class="section__title d-flex celebration justify-content-center gap-3">
+                        <h2><span>5M</span> on</h2>
+                        <h2><span>C</span>elebration ❤️</h2>
+                    </div>
+                </div>
+            </div> -->
+            <div class="instagram_celebration">
+                <div class="video_bg">
+                    <video class="w-100 h-100 object-fit-cover" src="assets/image/tisha-video.mp4" autoplay="" loop=""
+                        muted="" type="video/mp4"></video>
+                </div>
+                <div class="video_bg">
+                    <video class="w-100 h-100 object-fit-cover" src="assets/image/tanjin.mp4" autoplay="" loop=""
+                        muted="" type="video/mp4"></video>
+                </div>
+                <div class="video_bg">
+                    <video class="w-100 h-100 object-fit-cover" src="assets/image/video.mp4" autoplay="" loop=""
+                        muted="" type="video/mp4"></video>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- celebration end -->
 
     <!-- spotlight start -->
     <div class="spotlight__area section__padding">
